# faster-whisper-types

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yaml
src/faster_whisper_types/: types.py  util.py
tests/: test_types_util.py
