[project]
dependencies = ["faster-whisper", "pydantic>=2.9", "python-utils"]
name = "faster-whisper-types"
version = "0.1.0"
description = "Pydantic types for faster-whisper."
readme = "README.md"
requires-python = ">=3.12"
[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "pyright>=1.1.382.post0",
    "ruff>=0.6.8",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
package = true

[tool.uv.sources]
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper" }
python-utils = { git = "https://github.com/extrange/python-utils.git" }

[tool.pyright]
# pre-commit: make pyright use the venv
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
addopts = ["--import-mode=importlib"]
